@@ -21,7 +21,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.NavigableMap;
 import java.util.NavigableSet;
-import java.util.Objects;
 import java.util.Set;
 import java.util.TreeMap;
 import java.util.TreeSet;
@@ -49,6 +48,47 @@ public abstract class BaseValueService<
     @Autowired
     private void setValueTemplateService(ProductTemplateService productTemplateService) {
         this.productTemplateService = productTemplateService;
+    }
+
+    @Override
+    protected Mono<D> checkEntity(D entity, ProcessorAccess access) {
+        return FlatMapUtil.flatMapMono(
+                () -> Mono.zip(
+                        Boolean.TRUE.equals(entity.getIsParent())
+                                ? this.existsByName(
+                                        access.getAppCode(),
+                                        access.getClientCode(),
+                                        entity.getPlatform(),
+                                        entity.getProductTemplateId(),
+                                        entity.getId(),
+                                        entity.getName())
+                                : Mono.just(Boolean.FALSE),
+                        entity.hasParentLevels()
+                                ? this.existsById(
+                                        access.getAppCode(),
+                                        access.getClientCode(),
+                                        entity.getPlatform(),
+                                        entity.getProductTemplateId(),
+                                        entity.getParentLevel0(),
+                                        entity.getParentLevel1())
+                                : Mono.just(Boolean.TRUE)),
+                exists -> {
+                    if (exists.getT1())
+                        return this.msgService.throwMessage(
+                                msg -> new GenericException(HttpStatus.PRECONDITION_FAILED, msg),
+                                ProcessorMessageResourceService.DUPLICATE_NAME_FOR_ENTITY,
+                                entity.getName(),
+                                entity.getEntityName());
+
+                    if (!exists.getT2())
+                        return this.msgService.throwMessage(
+                                msg -> new GenericException(HttpStatus.PRECONDITION_FAILED, msg),
+                                ProcessorMessageResourceService.INVALID_PARENT,
+                                entity.getEntityName());
+
+                    entity.setName(NameUtil.normalize(entity.getName()));
+                    return Mono.just(entity);
+                });
     }
 
     @Override
@@ -113,51 +153,11 @@ public abstract class BaseValueService<
         });
     }
 
-    private Mono<D> validateEntity(D entity, ProcessorAccess access) {
-        return FlatMapUtil.flatMapMono(
-                () -> Mono.zip(
-                        Boolean.TRUE.equals(entity.getIsParent())
-                                ? this.existsByName(
-                                        access.getAppCode(),
-                                        access.getClientCode(),
-                                        entity.getPlatform(),
-                                        entity.getProductTemplateId(),
-                                        entity.getId(),
-                                        entity.getName())
-                                : Mono.just(Boolean.FALSE),
-                        entity.hasParentLevels()
-                                ? this.existsById(
-                                        access.getAppCode(),
-                                        access.getClientCode(),
-                                        entity.getPlatform(),
-                                        entity.getProductTemplateId(),
-                                        entity.getParentLevel0(),
-                                        entity.getParentLevel1())
-                                : Mono.just(Boolean.TRUE)),
-                exists -> {
-                    if (exists.getT1())
-                        return this.msgService.throwMessage(
-                                msg -> new GenericException(HttpStatus.PRECONDITION_FAILED, msg),
-                                ProcessorMessageResourceService.DUPLICATE_NAME_FOR_ENTITY,
-                                entity.getName(),
-                                entity.getEntityName());
-
-                    if (!exists.getT2())
-                        return this.msgService.throwMessage(
-                                msg -> new GenericException(HttpStatus.PRECONDITION_FAILED, msg),
-                                ProcessorMessageResourceService.INVALID_PARENT,
-                                entity.getEntityName());
-
-                    entity.setName(NameUtil.normalize(entity.getName()));
-                    return Mono.just(entity);
-                });
-    }
-
     @Override
     public Mono<D> create(D entity) {
         return FlatMapUtil.flatMapMono(
                 super::hasAccess,
-                access -> this.validateEntity(entity, access),
+                access -> this.checkEntity(entity, access),
                 (access, vEntity) -> this.applyOrder(vEntity, access),
                 (access, vEntity, aEntity) -> {
                     aEntity.setIsParent(Boolean.TRUE);
@@ -169,7 +169,7 @@ public abstract class BaseValueService<
 
     public Mono<D> createChild(ProcessorAccess access, D entity, D parentEntity) {
 
-        return FlatMapUtil.flatMapMono(() -> this.validateEntity(entity, access), vEntity -> {
+        return FlatMapUtil.flatMapMono(() -> this.checkEntity(entity, access), vEntity -> {
             entity.setIsParent(Boolean.FALSE);
             entity.setParentLevel0(parentEntity.getId());
 
@@ -177,43 +177,6 @@ public abstract class BaseValueService<
 
             return super.createInternal(access, entity);
         });
-    }
-
-    @Override
-    public Mono<D> update(D entity) {
-        return FlatMapUtil.flatMapMono(super::hasAccess, access -> this.updateInternal(access, entity));
-    }
-
-    @Override
-    public Mono<D> updateInternal(ProcessorAccess access, D entity) {
-        return FlatMapUtil.flatMapMono(
-                () -> this.validateEntity(entity, access),
-                vEntity -> super.updateInternal(access, entity),
-                (vEntity, updated) -> this.evictCache(updated).map(evicted -> updated));
-    }
-
-    @Override
-    public Mono<D> update(ULong key, Map<String, Object> fields) {
-        return FlatMapUtil.flatMapMono(
-                super::hasAccess,
-                access -> key != null ? this.read(key) : Mono.empty(),
-                (access, entity) -> super.updateInternal(access, key, fields),
-                (access, entity, updated) ->
-                        this.evictCache(entity).map(evicted -> updated).switchIfEmpty(Mono.just(updated)));
-    }
-
-    public Mono<D> updateInternalAndEvictCache(ProcessorAccess access, D entity) {
-        return FlatMapUtil.flatMapMono(() -> super.updateInternal(access, entity), updated -> this.evictCache(entity)
-                .map(evicted -> updated));
-    }
-
-    @Override
-    public Mono<Integer> delete(ULong id) {
-        return FlatMapUtil.flatMapMono(
-                super::hasAccess,
-                access -> this.read(id),
-                super::deleteInternal,
-                (access, entity, deleted) -> this.evictCache(entity).map(evicted -> deleted));
     }
 
     protected Mono<Boolean> existsById(
@@ -316,26 +279,30 @@ public abstract class BaseValueService<
         if (parentId == null) return Mono.empty();
 
         return this.getAllValues(appCode, clientCode, platform, productTemplateId, parentId)
-                .mapNotNull(map -> map.entrySet().stream()
+                .flatMap(map -> Mono.justOrEmpty(map.entrySet().stream()
                         .filter(entry -> parentId.equals(entry.getKey().getId()))
-                        .findFirst()
-                        .orElse(null));
+                        .findFirst()));
     }
 
     protected Mono<Map<D, Set<D>>> getAllValues(
             String appCode, String clientCode, Platform platform, ULong productTemplateId, ULong... parentIds) {
 
-        if (parentIds == null
-                || parentIds.length == 0
-                || Arrays.stream(parentIds).allMatch(Objects::isNull))
+        if (parentIds == null || parentIds.length == 0)
             return this.getAllValues(appCode, clientCode, platform, productTemplateId);
 
-        Set<ULong> parents = Set.of(parentIds);
+        Set<ULong> parents = new HashSet<>(Arrays.asList(parentIds));
+        parents.remove(null);
+
+        if (parents.isEmpty()) return this.getAllValues(appCode, clientCode, platform, productTemplateId);
 
         return this.getAllValues(appCode, clientCode, platform, productTemplateId)
-                .map(values -> values.entrySet().stream()
-                        .filter(entry -> parents.contains(entry.getKey().getId()))
-                        .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue)));
+                .map(values -> {
+                    Map<D, Set<D>> filtered = HashMap.newHashMap(parents.size());
+                    values.entrySet().stream()
+                            .filter(entry -> parents.contains(entry.getKey().getId()))
+                            .forEach(entry -> filtered.put(entry.getKey(), entry.getValue()));
+                    return filtered;
+                });
     }
 
     private Mono<Map<D, Set<D>>> getAllValues(
@@ -358,37 +325,33 @@ public abstract class BaseValueService<
     private Mono<Map<D, Set<D>>> processValuesAndBuildHierarchy(Tuple2<List<D>, Map<ULong, D>> tuple) {
         Map<D, Set<D>> result = new HashMap<>();
 
-        Map<ULong, Set<D>> parentToChildrenMap = this.buildParentChildrenMap(tuple.getT1(), result);
-        this.linkParentsWithChildren(result, parentToChildrenMap);
-
-        return Mono.just(result);
-    }
-
-    private Map<ULong, Set<D>> buildParentChildrenMap(List<D> values, Map<D, Set<D>> result) {
         Map<ULong, Set<D>> parentToChildrenMap = new HashMap<>();
 
-        for (D value : values) {
+        Map<ULong, D> idToEntityMap = new HashMap<>();
 
-            this.addToParentMap(parentToChildrenMap, value.getParentLevel0(), value);
-            this.addToParentMap(parentToChildrenMap, value.getParentLevel1(), value);
+        for (D value : tuple.getT1()) {
+            idToEntityMap.put(value.getId(), value);
+
+            if (value.getParentLevel0() != null)
+                parentToChildrenMap
+                        .computeIfAbsent(value.getParentLevel0(), k -> new HashSet<>())
+                        .add(value);
+
+            if (value.getParentLevel1() != null)
+                parentToChildrenMap
+                        .computeIfAbsent(value.getParentLevel1(), k -> new HashSet<>())
+                        .add(value);
 
             if (Boolean.TRUE.equals(value.getIsParent()) || !value.hasParentLevels())
                 result.put(value, new HashSet<>());
         }
 
-        return parentToChildrenMap;
-    }
+        parentToChildrenMap.forEach((parentId, children) -> {
+            D parent = idToEntityMap.get(parentId);
+            if (parent != null && result.containsKey(parent)) result.get(parent).addAll(children);
+        });
 
-    private void addToParentMap(Map<ULong, Set<D>> parentToChildrenMap, ULong parentId, D childValue) {
-        if (parentId != null)
-            parentToChildrenMap.computeIfAbsent(parentId, k -> new HashSet<>()).add(childValue);
-    }
-
-    private void linkParentsWithChildren(Map<D, Set<D>> result, Map<ULong, Set<D>> parentToChildrenMap) {
-        parentToChildrenMap.forEach((parentId, children) -> result.keySet().stream()
-                .filter(bv -> bv.getId().equals(parentId))
-                .findFirst()
-                .ifPresent(parentValue -> result.get(parentValue).addAll(children)));
+        return Mono.just(result);
     }
 
     public Mono<List<D>> getValuesFlat(
